--- a/jfreereport/ChangeLog
+++ b/jfreereport/ChangeLog
@@ -6,6 +6,10 @@ A list of changes in recent versions:
         * [BUG] The BaseFontSupport did not accept font files other than
          'ttf' due to an overly paranoid check. (Bug #1299056)
 
+        * [BUG] The FunctionUtilities.findElement and findAllElements methods
+          did not take the given root band into account and therefore only worked
+          on subbands. 
+
 0.8.6: (21-Sep-2005)
         * [BUG] The XML Parser handler for function properties did not handle
           specified classes correctly.
