--- a/jfreereport/README
+++ b/jfreereport/README
@@ -1,8 +1,8 @@
 ************************
-* JFREEREPORT 0.8.6    *
+* JFREEREPORT 0.8.6-1  *
 ************************
 
-21 Sep 2005
+12 Oct 2005
 
 1. INTRODUCTION
 ---------------
@@ -36,14 +36,14 @@ file.
 To edit the properties file, you may use the graphical configuration editor
 from the module "gui-config". The editor can be started by calling
 
-  java -jar jfreereport-gui-config-0.8.6.jar
+  java -jar jfreereport-gui-config-0.8.6-1.jar
 
 
 4. RUNNING THE DEMO
 -------------------
 The demo for JFreeReport can be started with
 
-  java -jar jfreereport-demo-0.8.6.jar
+  java -jar jfreereport-demo-0.8.6-1.jar
 
 
 5. OTHER LIBRARIES
@@ -90,7 +90,7 @@ java class
 
 or by starting the misc-referencedoc module with
 
-  java -jar jfreereport-misc-referencedoc-0.8.6.jar
+  java -jar jfreereport-misc-referencedoc-0.8.6-1.jar
 
 The reference manual documents all currently defined StyleKeys and
 the object definitions used in the stylekeys and when defining
