--- a/jfreereport/ChangeLog
+++ b/jfreereport/ChangeLog
@@ -3,6 +3,12 @@
 ---------------
 A list of changes in recent versions:
 
+0.8.6-2:
+        * [BUG] Having a pagebreak-after-print on a group-footer without
+          having an report footer caused the reporting to fail.
+
+        * 
+
 0.8.6-1: (12-Oct-2005)
         * [BUG] There was inconsistent behaviour when exporting single table
           reports using PageHeaders with 'print-on-lastpage' set to false.
