--- a/jfreereport/ChangeLog
+++ b/jfreereport/ChangeLog
@@ -3,6 +3,9 @@
 ---------------
 A list of changes in recent versions:
 
+        * The PDF-Output target now interprets the '_blank' window name as
+          command to open the link target document in a new window. 
+
 0.8.6-4: (20-Nov-2005)
         * (As the public CVS is not available, this release is used to make
           the current changes available to the public.)
