--- a/jfreereport/source/org/jfree/report/modules/gui/plaintext/resources/plaintext-export-resources_pl.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/plaintext/resources/plaintext-export-resources_pl.properties
@@ -2,10 +2,8 @@
 #Tue Jan 27 17:52:57 CET 2004
 
 action.export-to-plaintext.description=Zapisz w formacie tekstowym
-action.export-to-plaintext.icon=org/jfree/report/modules/gui/base/resources/SaveAs24.gif
 action.export-to-plaintext.mnemonic=VK_T
 action.export-to-plaintext.name=Zapisz jako plik tekstowy...
-action.export-to-plaintext.small-icon=org/jfree/report/modules/gui/base/resources/SaveAs16.gif
 action.export-to-plaintext.accelerator=VK_T
 
 error.processingfailed.title=Przetwarzanie raportu nie powiod\u0142o si\u0119
@@ -14,7 +12,7 @@ error.processingfailed.message=Podczas przetwarzania raportu wyst\u0105pi\u0142 
 error.savefailed.title=B\u0142\u0105d podczas zapisywania
 error.savefailed.message=Podczas zapisywania do pliku tekstowego wyst\u0105pi\u0142 nast\u0119puj\u0105cy b\u0142\u0105d\: {0}
 
-plain-text-exportdialog.chars-per-inch=cpi (Liczba znak\u00f3w na cal)
+plain-text-exportdialog.chars-per-inch=cpi (Liczba znaków na cal)
 plain-text-exportdialog.confirm=Potwierd\u017a
 plain-text-exportdialog.dialogtitle=Eksportuj Raport do pliku tekstowego ...
 plain-text-exportdialog.encoding=Kodowanie
