Added a real CSV data export. made sure that all demos boot the JFreeReport classes before using them.

--- a/jfreereport/source/org/jfree/report/modules/gui/csv/resources/csv-export-resources_de.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/csv/resources/csv-export-resources_de.properties
@@ -33,6 +33,15 @@ csvexportdialog.cancel=Abbrechen
 cvs-export.progressdialog.title=Exportiere in eine CSV-Datei ...
 cvs-export.progressdialog.message=Der Bericht wird nun in eine CSV Datei exportiert ...
 
+csvexportdialog.exported-bands=Inhalte f\u00fcr den Export ausw\u00e4hlen
+csvexportdialog.enable-report-header=Berichtskopf
+csvexportdialog.enable-report-footer=Berichtsfuss
+csvexportdialog.enable-group-header=Gruppenkopf
+csvexportdialog.enable-group-footer=Gruppenfuss
+csvexportdialog.enable-itemband=Detailbereich
+csvexportdialog.write-state-columns=Schreibe zusätzliche Zustandsinformationsspalten
+csvexportdialog.noContentForExport=Es wurden keine Inhalte zum Exportieren ausgewählt.
+
 error.processingfailed.title=Fehler beim bearbeiten des Berichtes
 error.processingfailed.message=Die Berichtsgenerierung ist fehlgeschlagen\: {0}
 
