--- a/jfreereport/ChangeLog
+++ b/jfreereport/ChangeLog
@@ -2,13 +2,19 @@
 1.  WHAT's NEW
 ---------------
 A list of changes in recent versions:
+0.8.6-7: (??-Jan-2006)
+        * [BUG] Type1 Fonts can be embedded, if there is a 'pfb' file for that
+          font. The old code simply declared all of these fonts to be
+          non-embeddable, which is simply not true.
+
         * [BUG] The excel export used the localized pattern to define the cell-
           format for number and date cells. This caused trouble in most non-
           english environments.
 
-        * [BUG] The excel cell width factor was invalid. Cell-widths should be
-          computed relative to the used font, although is makes images look
-          funny sometimes.
+        * [BUG] The excel cell width factor was invalid and caused trouble on
+          some systems. The new default scale factor has been increased to work
+          around these problems. It can be adjusted using the report
+          configuration for cases where the default is not appropriate.
 
         * [BUG] The line height of text elements was computed incorrectly and
           therefore clipped large glyphs. Now, the maximum height defined for the
@@ -16,6 +22,10 @@ A list of changes in recent versions:
 
           Setting a custom line height in conjunction with multiline elements
           caused exceptions due to another bug in that code.
+
+        * [BUG] The TrueType support did not register the available fonts. Thus
+          no truetype font information was used. Additionally, the PDF target
+          did not apply bold strokes to the fonts.
 
         * As a workaround for a bug in the JDK 1.5, DecimalFormats with
           an empty format string get initialized manually using a hardcoded
