More changes here ..

--- a/libfonts/ChangeLog
+++ b/libfonts/ChangeLog
@@ -2,7 +2,10 @@
 1.  WHAT's NEW
 ---------------
 A list of changes in recent versions:
-	* recognizes italic and oblique fonts.
+
+    * recognizes italic and oblique fonts.
+
+    * Support AWT and TrueType fonts using an common interface.
 
 21-Nov-2005: Version 0.1.1:
     * [BUG] All names should be used, when looking for font family names. 
