Fixed the state-advancement bug for pagebreak-before-print events

--- a/jfreereport/source/org/jfree/report/demo/internationalisation/i18ndemo_de.properties
+++ b/jfreereport/source/org/jfree/report/demo/internationalisation/i18ndemo_de.properties
@@ -4,3 +4,5 @@ data.secondElement=Zweites\ Element
 data.thirdElement=Drittes\ Element
 data.fourthElement=Viertes\ Element
 data.lastElement=Letztes\ Element
+
+data.messagefield.format=Der Bericht "$(report.name)" demonstiert JFreeReport's Lokalisierungsfähigkeiten.
