--- a/libfonts/README
+++ b/libfonts/README
@@ -2,7 +2,7 @@
 * LibFonts - A JFreeReport Utility Library  *
 *********************************************
 
-11 Nov 2005
+30 Apr 2006
 
 1. INTRODUCTION
 ---------------
@@ -61,7 +61,16 @@ Ant is licensed under the terms of the Apache Software License (a
 popular open source software license).
 
 
-5. OTHER FEEDBACK
+5. Generated Encodings
+----------------------
+
+LibFonts uses generated encoding sets to provide replacements for missing
+encodings in the non-internationalized JDKs. These encodings have been generated
+from files available at 'http://www.unicode.org/'; copies of these files can
+be found in the public CVS at sourceforge as well.
+
+
+6. OTHER FEEDBACK
 -----------------
 For other feedback and comments, please post a message on the
 JFreeReport forum. The Forum is available at
