--- a/libfonts/ChangeLog
+++ b/libfonts/ChangeLog
@@ -3,6 +3,9 @@
 ---------------
 A list of changes in recent versions:
 
+0.1.8: (30-May-2006)
+        * Updated the libraries and all code that depends on them.
+        
 0.1.7: (30-Apr-2006)
         * [BUG] Missing or invalid encoding implementations interrupted the
           font registration process. Missing encodings are now replaced by
