--- a/libfonts/ChangeLog
+++ b/libfonts/ChangeLog
@@ -3,6 +3,12 @@
 ---------------
 A list of changes in recent versions:
 
+0.1.9: (29-Jun-2006)
+        * [BUG] Oblique and Italics detection was weird and wrong.
+		
+		* [BUG] CodePointBuffer and ByteBuffer classes made a boo on copying the
+		  internal buffers.
+        
 0.1.8: (30-May-2006)
         * Updated the libraries and all code that depends on them.
         
