--- a/libloader/ChangeLog
+++ b/libloader/ChangeLog
@@ -7,6 +7,9 @@ once we've reached version 0.2.0.
 
 A list of changes in recent versions:
 
+0.1.5: (26-Sep-2006)
+        * Limited the size of resources that are held in memory to 512kb.
+          
 0.1.4: (31-Aug-2006)
 0.1.3: (30-Jul-2006)
 0.1.2: (30-May-2006)
